# IDX-Scrapper

./: .env.example  .gitignore  LICENSE  README.md  README.md.bak  cli.py  export_idx_keywords_csv.py  idx  idx_cli.py  install_idx.sh  pyproject.toml  requirements.txt  run_idx.sh  tmp_auto_login_idx.py  tmp_probe_playwright.py
scraper/: __init__.py  idx_api.py  scraper.py  utils.py
scripts/: create_env.py
tests/: test_idx_api.py  test_utils.py
