[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "idx-scraper"
version = "0.1.0"
description = "IDX announcements scraper (exports Kode_Emiten, Judul_Pengumuman, Tanggal_Pengumuman)"
authors = [ { name = "Dicky Adhi Satria" } ]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
dependencies = [
	"playwright>=1.30.0",
	"pandas>=2.0.0",
	"openpyxl>=3.0.0",
	"requests>=2.0.0",
	"beautifulsoup4>=4.9.0",
	"python-dotenv>=1.0.0",
	"keyring>=23.0.0",
]

[project.scripts]
idx = "idx:main"
